language feature completed

--- a/locales/am.json
+++ b/locales/am.json
@@ -39,17 +39,110 @@
   "incidents_list_subtitle": "እነዚህ በSunShine Meri Luke Compound የተዘገቡ ክስተቶች ናቸው",
   "no_incidents_found": "ምንም ክስተት አልተዘገበም",
   "incidents_error": "ክስተቶችን መጫን አልተሳካም። እባክዎ እንደገና ይሞክሩ።",
-  "permission_denied": "ፈቃድ ተከልክሏል",
-  "allow_photos_permission": "ምስሎችን ለማስገባት ወደ ፎቶዎችዎ መዳረሻ ፈቃድ ይስጡ።",
-  "add_image_evidence": "እባክዎ ምስል እንደ ማስረጃ ያክሉ",
+  "retry": "እንደገና ይሞክሩ",
+  "permission_denied": "ፈቃድ ተቀብሏል",
+  "allow_photos_permission": "ምስሎችን ለመጫን የፎቶዎች ፈቃድ ይስጡ።",
+  "add_image_evidence": "እባክዎ እንደ ማስረጃ ምስል ያክሉ",
   "enter_incident_description": "እባክዎ የክስተቱን መግለጫ ያስገቡ",
-  "incident_reported_success": "ክስተት በተሳካ ሁኔታ ታውቆ ተገብቷል",
+  "incident_reported_success": "ክስተቱ በተሳካ ሁኔታ ተዘግቧል",
   "incident_info_below": "የክስተቱን መረጃ ከታች ያስገቡ",
   "evidence": "ማስረጃ",
   "add_photo": "ፎቶ ያክሉ",
-  "write_incident": "ክስተቱን ይጻፉ",
-  "type_here": "እዚህ ይጻፉ...",
-  "submit": "አስገባ",
-  "incident_submit_failed": "ክስተት ማስገባት አልተሳካም። እባክዎ እንደገና ይሞክሩ።",
-  "back": "ተመለስ"
+  "write_incident": "ክስተቱን ይፃፉ",
+  "type_here": "እዚህ ይፃፉ...",
+  "submit": "ያስገቡ",
+  "incident_submit_failed": "ክስተቱን ማስገባት አልተሳካም። እባክዎ እንደገና ይሞክሩ።",
+  "back": "ተመለስ",
+  "services": "አገልግሎቶች",
+  "services_list_subtitle": "እነዚህ በSunShine Meri Luke Compound የሚሰጡ አገልግሎቶች ናቸው",
+  "due": "የሚከፈል",
+  "pending": "በመጠበቅ ላይ",
+  "ongoing": "በሂደት ላይ",
+  "completed": "ተጠናቅቋል",
+  "previous": "የቀድሞ",
+  "next": "ቀጣይ",
+  "polls": "ምርጫዎች",
+  "polls_subtitle": "በማህበረሰብ ምርጫዎች ላይ ይሳተፉ እና አስተያየትዎን ያጋሩ",
+  "no_polls_available": "ምርጫዎች የሉም",
+  "polls_error": "ምርጫዎችን መጫን አልተሳካም። እባክዎ እንደገና ይሞክሩ።",
+  "groups_list_subtitle": "እነዚህ አባል የሆኑት ቡድኖች ናቸው",
+  "no_groups_available": "ቡድኖች የሉም",
+  "groups_error": "ቡድኖችን መጫን አልተሳካም። እባክዎ እንደገና ይሞክሩ።",
+  "no_description_available": "መግለጫ የለም",
+  "today": "ዛሬ",
+  "yesterday": "ትላንት",
+  "announcements_error": "ማስታወቂያዎችን መጫን አልተሳካም",
+  "current_language": "አሁን ያለው: ",
+  "select_language": "ቋንቋ ይምረጡ",
+  "plumbing": "የውሃ መግጠሚያ",
+  "electricity": "ኤሌክትሪክ",
+  "cleaning": "መጽረት",
+  "maintenance": "ጥገና",
+  "other": "ሌላ",
+  "enter_service_description": "እባክዎ የአገልግሎቱን መግለጫ ያስገቡ",
+  "service_request_submitted": "የአገልግሎት ጥያቄ በተሳካ ሁኔታ ተላክቷል",
+  "service_request_failed": "የአገልግሎት ጥያቄ ማስገባት አልተሳካም። እባክዎ እንደገና ይሞክሩ።",
+  "service_info_below": "የሚያስፈልገውን አገልግሎት ከታች ያስገቡ",
+  "payments": "ክፍያዎች",
+  "payments_list_subtitle": "እነዚህ በSunShine Meri Luke Compound የተጠየቁ ክፍያዎች ናቸው",
+  "payments_error": "ክፍያዎችን መጫን አልተሳካም",
+  "loading": "ይጫናል...",
+  "no_payments_found": "ምንም ክፍያ አልተገኘም።",
+  "birr": "ብር",
+  "paid": "ተከፍሏል",
+  "not_paid": "አልተከፈለም",
+  "payment": "ክፍያ",
+  "payment_id": "የክፍያ መለያ",
+  "payment_details_error": "የክፍያ መረጃዎችን መጫን አልተሳካም።",
+  "websocket_error": "የድረ-ገጽ ግንኙነት ስህተት።",
+  "payment_initiation_failed": "ክፍያ መጀመር አልተሳካም። እባክዎ እንደገና ይሞክሩ።",
+  "waiting_payment_confirmation": "የክፍያ ማረጋገጫ ይጠበቃል...",
+  "pay": "ይክፈል",
+  "payment_successful": "ክፍያ በተሳካ ሁኔታ ተከፍሏል",
+  "payment_success_message": "የእርስዎ ክፍያ በተሳካ ሁኔታ ተከፍሏል። አመሰግናለሁ!",
+  "payment_failed": "ክፍያ አልተሳካም",
+  "payment_failed_message": "የእርስዎ ክፍያ አልተሳካም። እባክዎ እንደገና ይሞክሩ ወይም ድጋፍ ያግኙ።",
+  "go_to_homepage": "ወደ መነሻ ገጽ ይሂዱ",
+  "group_details": "የቡድን መረጃዎች",
+  "select_option_manage_group": "ቡድንዎን ለማስተዳደር አማራጭ ይምረጡ",
+  "view_manage_group_payments": "የቡድን ክፍያዎችን ይመልከቱ እና ያስተዳድሩ",
+  "announcements": "ማስታወቂያዎች",
+  "view_manage_group_announcements": "የቡድን ማስታወቂያዎችን ይመልከቱ እና ያስተዳድሩ",
+  "group_payments": "የቡድን ክፍያዎች",
+  "group_payments_description": "እነዚህ ለቡድንዎ የሚደረጉ ክፍያዎች ናቸው",
+  "group_announcements": "የቡድን ማስታወቂያዎች",
+  "group_announcements_description": "እነዚህ ለቡድንዎ የሚደረጉ ማስታወቂያዎች ናቸው",
+  "active": "ንቁ",
+  "new": "አዲስ",
+  "failed_load_payment_details": "የክፍያ መረጃዎችን መጫን አልተሳካም።",
+  "websocket_connection_error": "የድረ-ገጽ ግንኙነት ስህተት።",
+  "failed_initiate_payment": "ክፍያ መጀመር አልተሳካም። እባክዎ እንደገና ይሞክሩ።",
+  "failed_load_poll": "ምርጫ መጫን አልተሳካም",
+  "vote_submitted_successfully": "ድምጽ በተሳካ ሁኔታ ተላክቷል።",
+  "failed_submit_vote": "ድምጽ ማስገባት አልተሳካም። እባክዎ እንደገና ይሞክሩ።",
+  "go_back": "ተመለስ",
+  "created": "ተፈጥሯል",
+  "back_to_polls": "ወደ ምርጫዎች ተመለስ",
+  "failed_load_service_details": "የአገልግሎት መረጃዎችን መጫን አልተሳካም። እባክዎ እንደገና ይሞክሩ።",
+  "delete_service_request": "የአገልግሎት ጥያቄ ሰርዝ",
+  "delete_service_confirmation": "ይህን የአገልግሎት ጥያቄ መሰረዝ እርስዎ እርግጠኛ ናቸው? ይህ ድርጊት ሊገለበጥ አይችልም።",
+  "delete": "ሰርዝ",
+  "failed_delete_service": "አገልግሎት ማሰረዝ አልተሳካም። እባክዎ እንደገና ይሞክሩ።",
+  "service_not_found": "አገልግሎት አልተገኘም",
+  "service_type": "የአገልግሎት አይነት",
+  "status": "ሁኔታ",
+  "description": "መግለጫ",
+  "created_at": "ተፈጥሯል በ",
+  "last_updated": "ያለፈ ጊዜ የተዘመነ",
+  "deleting": "ይሰረዛል...",
+  "already_reviewed": "ድርም ተገመተ",
+  "review": "ግምገማ",
+  "service_requests": "የአገልግሎት ጥያቄዎች",
+  "requested_on": "የተጠየቀ በ",
+  "please_select_rating": "እባክዎ ደረጃ ይምረጡ።",
+  "failed_submit_feedback": "ግብረመልስ ማስገባት አልተሳካም። እባክዎ እንደገና ይሞክሩ።",
+  "how_was_experience": "የእርስዎ ስሜት እንዴት ነበር?",
+  "order_successfully_done": "የእርስዎ ትዕዛዝ በተሳካ ሁኔታ ተጠናቅቋል። ስለ ስሜትዎ አጭር ግብረመልስ መስጠት ይፈልጋሉ?",
+  "write_review": "ግምገማ ይፃፉ",
+  "skip": "ዝለል"
 }
