--- a/locales/en.json
+++ b/locales/en.json
@@ -55,5 +55,97 @@
   "type_here": "Type here...",
   "submit": "Submit",
   "incident_submit_failed": "Failed to submit incident. Please try again later.",
-  "back": "Back"
+  "back": "Back",
+  "services": "Services",
+  "services_list_subtitle": "This is the list of services provided by SunShine Meri Luke Compound",
+  "due": "Due",
+  "pending": "Pending",
+  "ongoing": "Ongoing",
+  "completed": "Completed",
+  "previous": "Previous",
+  "next": "Next",
+  "polls": "Polls",
+  "polls_subtitle": "Participate in community polls and share your opinion",
+  "no_polls_available": "No polls available",
+  "polls_error": "Failed to load polls. Please try again later.",
+  "groups_list_subtitle": "These are the list of groups you are a member of",
+  "no_groups_available": "No groups available",
+  "groups_error": "Failed to load groups. Please try again later.",
+  "no_description_available": "No description available",
+  "today": "Today",
+  "yesterday": "Yesterday",
+  "announcements_error": "Failed to load announcements",
+  "current_language": "Current: ",
+  "select_language": "Select Language",
+  "plumbing": "Plumbing",
+  "electricity": "Electricity",
+  "cleaning": "Cleaning",
+  "maintenance": "Maintenance",
+  "other": "Other",
+  "enter_service_description": "Please enter a service description",
+  "service_request_submitted": "Service request submitted successfully",
+  "service_request_failed": "Failed to submit service request",
+  "service_info_below": "Put the service you need below",
+  "payments": "Payments",
+  "payments_list_subtitle": "This are the list of payments requested by SunShine Meri Luke Compound",
+  "payments_error": "Failed to load payments",
+  "loading": "Loading...",
+  "no_payments_found": "No payments found.",
+  "birr": "Birr",
+  "paid": "Paid",
+  "not_paid": "Not Paid",
+  "payment": "Payment",
+  "payment_id": "Payment ID",
+  "payment_details_error": "Failed to load payment details.",
+  "websocket_error": "WebSocket connection error.",
+  "payment_initiation_failed": "Failed to initiate payment. Please try again.",
+  "waiting_payment_confirmation": "Waiting for payment confirmation...",
+  "pay": "Pay",
+  "payment_successful": "Payment successful",
+  "payment_success_message": "Your payment has been Successfully placed. Thank you!",
+  "payment_failed": "Payment Failed",
+  "payment_failed_message": "Your payment was not successful. Please try again or contact support.",
+  "go_to_homepage": "Go to Homepage",
+  "group_details": "Group Details",
+  "select_option_manage_group": "Select an option to manage your group",
+  "view_manage_group_payments": "View and manage group payments",
+  "announcements": "Announcements",
+  "view_manage_group_announcements": "View and manage group announcements",
+  "group_payments": "Group Payments",
+  "group_payments_description": "These are the payments for your group",
+  "group_announcements": "Group Announcements",
+  "group_announcements_description": "These are the announcements for your group",
+  "active": "Active",
+  "new": "New",
+  "failed_load_payment_details": "Failed to load payment details.",
+  "websocket_connection_error": "WebSocket connection error.",
+  "failed_initiate_payment": "Failed to initiate payment. Please try again.",
+  "failed_load_poll": "Failed to load poll",
+  "vote_submitted_successfully": "Vote submitted successfully.",
+  "failed_submit_vote": "Failed to submit vote. Please try again.",
+  "go_back": "Go Back",
+  "created": "Created",
+  "back_to_polls": "Back to Polls",
+  "failed_load_service_details": "Failed to load service details. Please try again later.",
+  "delete_service_request": "Delete Service Request",
+  "delete_service_confirmation": "Are you sure you want to delete this service request? This action cannot be undone.",
+  "delete": "Delete",
+  "failed_delete_service": "Failed to delete service. Please try again.",
+  "service_not_found": "Service not found",
+  "service_type": "Service Type",
+  "status": "Status",
+  "description": "Description",
+  "created_at": "Created At",
+  "last_updated": "Last Updated",
+  "deleting": "Deleting...",
+  "already_reviewed": "Already Reviewed",
+  "review": "Review",
+  "service_requests": "Service Requests",
+  "requested_on": "Requested on",
+  "please_select_rating": "Please select a rating.",
+  "failed_submit_feedback": "Failed to submit feedback. Please try again.",
+  "how_was_experience": "How was your Experience?",
+  "order_successfully_done": "Your order is Successfully Done. Do you mind giving a small feedback about your experience?",
+  "write_review": "WRITE A REVIEW",
+  "skip": "Skip"
 }
