--- a/locales/om.json
+++ b/locales/om.json
@@ -44,15 +44,107 @@
   "incidents_error": "Mudannoowwan fe'uu hin milkoofne. Mee irra deebi'ii yaali.",
   "permission_denied": "Hayyama dhoorkame",
   "allow_photos_permission": "Suuraalee galchuu dandeessuuf hayyama kennuu qabda.",
-  "add_image_evidence": "Mee suuraa ragaa dabali",
-  "enter_incident_description": "Mee ibsa mudannoo galchi",
-  "incident_reported_success": "Mudannoon milkaa'inaan galmaa'eera",
-  "incident_info_below": "Odeeffannoo mudannoo gadi fageenyaan galchi",
+  "add_image_evidence": "Mee suuraa ragaa akka ta'e galchi",
+  "enter_incident_description": "Mee mudannoo ibsa galchi",
+  "incident_reported_success": "Mudannoo milkaa'inaan galmaa'e",
+  "incident_info_below": "Mudannoo odeeffannoo gadi fageenyaan galchi",
   "evidence": "Ragaa",
-  "add_photo": "Suuraa dabaluu",
-  "write_incident": "MUDANNOO BARREEFFADHU",
-  "type_here": "As barreessi...",
-  "submit": "Ergi",
+  "add_photo": "Suuraa dabali",
+  "write_incident": "MUDANNOO BARREESSI",
+  "type_here": "Asii barreessi...",
+  "submit": "Galchi",
   "incident_submit_failed": "Mudannoo galchuu hin milkoofne. Mee irra deebi'ii yaali.",
-  "back": "Deebi'i"
+  "back": "Duubatti",
+  "services": "Tajaajilawwan",
+  "services_list_subtitle": "Kunoo tajaajilawwan SunShine Meri Luke Compound keessatti kennaman",
+  "due": "Kan kaffalu",
+  "pending": "Eegaa jiru",
+  "ongoing": "Furmaata irratti",
+  "completed": "Xumurrame",
+  "previous": "Duraan",
+  "next": "Itti aansu",
+  "polls": "Filannoo",
+  "polls_subtitle": "Filannoo hawaasa keessatti hirmaadhaa fi yaada kee waliin qoodi",
+  "no_polls_available": "Filannoo hin jiru",
+  "polls_error": "Filannoo fe'uu hin milkoofne. Mee irra deebi'ii yaali.",
+  "groups_list_subtitle": "Kunoo gareewwan keessan hirmaataa ta'an",
+  "no_groups_available": "Gareewwan hin jiran",
+  "groups_error": "Gareewwan fe'uu hin milkoofne. Mee irra deebi'ii yaali.",
+  "no_description_available": "Ibsa hin jiru",
+  "today": "Har'a",
+  "yesterday": "Booda",
+  "announcements_error": "Beellamaa fe'uu hin milkoofne",
+  "current_language": "Amma jiru: ",
+  "select_language": "Afaan filadhaa",
+  "plumbing": "Bishaan",
+  "electricity": "Eleektiriikii",
+  "cleaning": "Qulqulleessi",
+  "maintenance": "Hojiirra oolii",
+  "other": "Kaan",
+  "enter_service_description": "Mee tajaajila ibsa galchi",
+  "service_request_submitted": "Tajaajila gaaffii milkaa'inaan galmaa'e",
+  "service_request_failed": "Tajaajila gaaffii galchuu hin milkoofne. Mee irra deebi'ii yaali.",
+  "service_info_below": "Tajaajila barbaachisu keessan gadi fageenyaan galchi",
+  "payments": "Kaffaltii",
+  "payments_list_subtitle": "Kunoo kaffaltii SunShine Meri Luke Compound keessatti gaafataman",
+  "payments_error": "Kaffaltii fe'uu hin milkoofne",
+  "loading": "Fe'aa jiru...",
+  "no_payments_found": "Kaffaltii hin argamne.",
+  "birr": "Birrii",
+  "paid": "Kaffalame",
+  "not_paid": "Kaffalame hin jiru",
+  "payment": "Kaffaltii",
+  "payment_id": "Kaffaltii ID",
+  "payment_details_error": "Kaffaltii odeeffannoo fe'uu hin milkoofne.",
+  "websocket_error": "WebSocket walqunnamaa dogoggora.",
+  "payment_initiation_failed": "Kaffaltii jalqabuu hin milkoofne. Mee irra deebi'ii yaali.",
+  "waiting_payment_confirmation": "Kaffaltii mirkaneessuu eegaa jiru...",
+  "pay": "Kaffali",
+  "payment_successful": "Kaffaltii milkaa'e",
+  "payment_success_message": "Kaffaltii keessan milkaa'inaan galmaa'e. Galatoomi!",
+  "payment_failed": "Kaffaltii Hin Milkoofne",
+  "payment_failed_message": "Kaffaltii keessan hin milkoofne. Mee irra deebi'ii yaali yookiin deeggarsa barbaadi.",
+  "go_to_homepage": "Mana duraa deemi",
+  "group_details": "Garee odeeffannoo",
+  "select_option_manage_group": "Garee keessan bulchuu dandeessuuf filannoo filadhaa",
+  "view_manage_group_payments": "Garee kaffaltii ilaaluu fi bulchuu",
+  "announcements": "Beellamaa",
+  "view_manage_group_announcements": "Garee beellamaa ilaaluu fi bulchuu",
+  "group_payments": "Garee Kaffaltii",
+  "group_payments_description": "Kunoo garee keessan kaffaltii",
+  "group_announcements": "Garee Beellamaa",
+  "group_announcements_description": "Kunoo garee keessan beellamaa",
+  "active": "Hojii irratti",
+  "new": "Haaraa",
+  "failed_load_payment_details": "Kaffaltii odeeffannoo fe'uu hin milkoofne.",
+  "websocket_connection_error": "WebSocket walqunnamaa dogoggora.",
+  "failed_initiate_payment": "Kaffaltii jalqabuu hin milkoofne. Mee irra deebi'ii yaali.",
+  "failed_load_poll": "Filannoo fe'uu hin milkoofne",
+  "vote_submitted_successfully": "Filannoo milkaa'inaan galmaa'e.",
+  "failed_submit_vote": "Filannoo galchuu hin milkoofne. Mee irra deebi'ii yaali.",
+  "go_back": "Duubatti",
+  "created": "Uumame",
+  "back_to_polls": "Filannoo duubatti",
+  "failed_load_service_details": "Tajaajila odeeffannoo fe'uu hin milkoofne. Mee irra deebi'ii yaali.",
+  "delete_service_request": "Tajaajila gaaffii haquu",
+  "delete_service_confirmation": "Tajaajila gaaffii kana haquu keessan mirkanaa? Dhaamsa kana deebisuu hin dandeessu.",
+  "delete": "Haquu",
+  "failed_delete_service": "Tajaajila haquu hin milkoofne. Mee irra deebi'ii yaali.",
+  "service_not_found": "Tajaajila hin argamne",
+  "service_type": "Tajaajila gosa",
+  "status": "Haala",
+  "description": "Ibsa",
+  "created_at": "Uumame",
+  "last_updated": "Duraan jijjiirrame",
+  "deleting": "Haquu irratti...",
+  "already_reviewed": "Duraan ilaaluu",
+  "review": "Ilaaluu",
+  "service_requests": "Tajaajila Gaaffii",
+  "requested_on": "Gaafatame",
+  "please_select_rating": "Mee sadarkaa filadhaa.",
+  "failed_submit_feedback": "Yaada galchuu hin milkoofne. Mee irra deebi'ii yaali.",
+  "how_was_experience": "Muuxannoo keessan akkamii ture?",
+  "order_successfully_done": "Ajaja keessan milkaa'inaan xumurrame. Muuxannoo keessan waliin yaada gabaabaa kennuu barbaadduu?",
+  "write_review": "ILAALUU BARREESSI",
+  "skip": "Darbi"
 }
