--- a/locales/ti.json
+++ b/locales/ti.json
@@ -38,18 +38,111 @@
   "add_incident": "ክስተት ወስኹ",
   "incidents_list_subtitle": "እዚኦም ኣብ SunShine Meri Luke Compound ዝተዘገቡ ክስተታት እዮም",
   "no_incidents_found": "ክስተት ኣይተዘገበን",
-  "incidents_error": "ክስተታት ምጽዓን ኣይተሳናኸን። በጃኹም እንደገና ፈትኑ።",
-  "permission_denied": "ፍቓድ ተኣግዶም",
-  "allow_photos_permission": "ስእሊታት ምምጻን ንምኻን ፍቓድ ሃበሉ።",
-  "add_image_evidence": "በጃኹም ስእሊ እንተማስረጃ ወስኹ",
-  "enter_incident_description": "በጃኹም መግለጺ ክስተት ኣእቱ",
-  "incident_reported_success": "ክስተት ብስእሊ ተዘጊቡ ተቐቢሉ",
-  "incident_info_below": "መረጃ ክስተት ብቕልፉ ኣእቱ",
-  "evidence": "ማስረጃ",
+  "incidents_error": "ክስተታት ምምዛዝ ኣይተሳናኸን። በጃኹም እንደገና ፈትኑ።",
+  "retry": "እንደገና ፈትኑ",
+  "permission_denied": "ፈቃድ ተቐቢሉ",
+  "allow_photos_permission": "ስእልታት ምምዛዝ ንምኽኣል ፈቃድ ሃቡ።",
+  "add_image_evidence": "በጃኹም ከም መረጋገጺ ስእሊ ወስኹ",
+  "enter_incident_description": "በጃኹም ክስተት መግለጺ ኣእቱ",
+  "incident_reported_success": "ክስተት ብስእሊ ተዘጊቡ",
+  "incident_info_below": "ክስተት መረጃ ብቕልፉ ኣእቱ",
+  "evidence": "መረጋገጺ",
   "add_photo": "ስእሊ ወስኹ",
-  "write_incident": "ክስተት ጽሓፉ",
-  "type_here": "ኣብዚ ጽሓፉ...",
-  "submit": "ልኣኽ",
-  "incident_submit_failed": "ክስተት ምምዝጋብ ኣይተሳናኸን። በጃኹም እንደገና ፈትኑ።",
-  "back": "ተመለስ"
+  "write_incident": "ክስተት ጽሓፍ",
+  "type_here": "ኣብዚ ጽሓፍ...",
+  "submit": "ሰደድ",
+  "incident_submit_failed": "ክስተት ምስዳር ኣይተሳናኸን። በጃኹም እንደገና ፈትኑ።",
+  "back": "ተመለስ",
+  "services": "ኣገልግሎትታት",
+  "services_list_subtitle": "እዚኦም ብSunShine Meri Luke Compound ዝምረቑ ኣገልግሎትታት እዮም",
+  "due": "ዝተሓበሰ",
+  "pending": "ይጽበ ኣሎ",
+  "ongoing": "ኣብ ሂደት ኣሎ",
+  "completed": "ተዛዚሙ",
+  "previous": "ቅድሚ",
+  "next": "ቀጺሉ",
+  "polls": "ምርጫታት",
+  "polls_subtitle": "ኣብ ማሕበረሰብ ምርጫታት ተሳተፍ እሞ ርእይቶኹም ኣጋራውዎ",
+  "no_polls_available": "ምርጫታት የለዉን",
+  "polls_error": "ምርጫታት ምምዛዝ ኣይተሳናኸን። በጃኹም እንደገና ፈትኑ።",
+  "groups_list_subtitle": "እዚኦም ኣባል ዝዀኑ ቡድናት እዮም",
+  "no_groups_available": "ቡድናት የለዉን",
+  "groups_error": "ቡድናት ምምዛዝ ኣይተሳናኸን። በጃኹም እንደገና ፈትኑ።",
+  "no_description_available": "መግለጺ የለን",
+  "today": "ሎምዓንቲ",
+  "yesterday": "ትማሊ",
+  "announcements_error": "ማስታወቂያታት ምምዛዝ ኣይተሳናኸን",
+  "current_language": "ኣሁኑ ዘሎ: ",
+  "select_language": "ቋንቋ ምረጽ",
+  "plumbing": "ማይ",
+  "electricity": "ኤሌክትሪኪ",
+  "cleaning": "ጽረት",
+  "maintenance": "ጥገና",
+  "other": "ካልእ",
+  "enter_service_description": "በጃኹም ኣገልግሎት መግለጺ ኣእቱ",
+  "service_request_submitted": "ኣገልግሎት ሕቶ ብስእሊ ተሰዲዱ",
+  "service_request_failed": "ኣገልግሎት ሕቶ ምስዳር ኣይተሳናኸን። በጃኹም እንደገና ፈትኑ።",
+  "service_info_below": "ዘድልየኩም ኣገልግሎት ብቕልፉ ኣእቱ",
+  "payments": "ክፍሊታት",
+  "payments_list_subtitle": "እዚኦም ብSunShine Meri Luke Compound ዝተሓትቱ ክፍሊታት እዮም",
+  "payments_error": "ክፍሊታት ምምዛዝ ኣይተሳናኸን",
+  "loading": "ይጫን ኣሎ...",
+  "no_payments_found": "ክፍሊታት ኣይተገኙን።",
+  "birr": "ብር",
+  "paid": "ተኸፊሉ",
+  "not_paid": "ኣይተኸፊለን",
+  "payment": "ክፍሊት",
+  "payment_id": "ክፍሊት መለያ",
+  "payment_details_error": "ክፍሊት መረጃታት ምምዛዝ ኣይተሳናኸን።",
+  "websocket_error": "ድረ-ገጽ ግንኙነት ስህተት።",
+  "payment_initiation_failed": "ክፍሊት ምጅማር ኣይተሳናኸን። በጃኹም እንደገና ፈትኑ።",
+  "waiting_payment_confirmation": "ክፍሊት ማረጋገጺ ይጽበ ኣሎ...",
+  "pay": "ክፈል",
+  "payment_successful": "ክፍሊት ብስእሊ ተኸፊሉ",
+  "payment_success_message": "ክፍሊትኩም ብስእሊ ተኸፊሉ። የቐንየለይ!",
+  "payment_failed": "ክፍሊት ኣይተሳናኸን",
+  "payment_failed_message": "ክፍሊትኩም ኣይተሳናኸን። በጃኹም እንደገና ፈትኑ ወይ ድጋፍ ሕቶ ግበሩ።",
+  "go_to_homepage": "ናብ መነሻ ገጽ ኪዱ",
+  "group_details": "ቡድን መረጃታት",
+  "select_option_manage_group": "ቡድንኩም ንምምሕዳር ምረጻ ምረጹ",
+  "view_manage_group_payments": "ቡድን ክፍሊታት ርኣዩ እሞ ምምሕዳር ግበሩ",
+  "announcements": "ማስታወቂያታት",
+  "view_manage_group_announcements": "ቡድን ማስታወቂያታት ርኣዩ እሞ ምምሕዳር ግበሩ",
+  "group_payments": "ቡድን ክፍሊታት",
+  "group_payments_description": "እዚኦም ንቡድንኩም ዝዀኑ ክፍሊታት እዮም",
+  "group_announcements": "ቡድን ማስታወቂያታት",
+  "group_announcements_description": "እዚኦም ንቡድንኩም ዝዀኑ ማስታወቂያታት እዮም",
+  "active": "ንቁ",
+  "new": "ሓድሽ",
+  "failed_load_payment_details": "ክፍሊት መረጃታት ምምዛዝ ኣይተሳናኸን።",
+  "websocket_connection_error": "ድረ-ገጽ ግንኙነት ስህተት።",
+  "failed_initiate_payment": "ክፍሊት ምጅማር ኣይተሳናኸን። በጃኹም እንደገና ፈትኑ።",
+  "failed_load_poll": "ምርጫ ምምዛዝ ኣይተሳናኸን",
+  "vote_submitted_successfully": "ድምጺ ብስእሊ ተሰዲዱ።",
+  "failed_submit_vote": "ድምጺ ምስዳር ኣይተሳናኸን። በጃኹም እንደገና ፈትኑ።",
+  "go_back": "ተመለስ",
+  "created": "ተፈጢሩ",
+  "back_to_polls": "ናብ ምርጫታት ተመለስ",
+  "failed_load_service_details": "ኣገልግሎት መረጃታት ምምዛዝ ኣይተሳናኸን። በጃኹም እንደገና ፈትኑ።",
+  "delete_service_request": "ኣገልግሎት ሕቶ ሰርዝ",
+  "delete_service_confirmation": "እዚ ኣገልግሎት ሕቶ ምስረዝ ርግጸኛ ዲኹም? እዚ ስራሕ ክመለስ ኣይክእልን።",
+  "delete": "ሰርዝ",
+  "failed_delete_service": "ኣገልግሎት ምስረዝ ኣይተሳናኸን። በጃኹም እንደገና ፈትኑ።",
+  "service_not_found": "ኣገልግሎት ኣይተገኘን",
+  "service_type": "ኣገልግሎት ዓይነት",
+  "status": "ስታተስ",
+  "description": "መግለጺ",
+  "created_at": "ተፈጢሩ",
+  "last_updated": "ዝመለሰ ግዜ",
+  "deleting": "ይሰርዝ ኣሎ...",
+  "already_reviewed": "ድሮ ተገምተ",
+  "review": "ግምገማ",
+  "service_requests": "ኣገልግሎት ሕቶታት",
+  "requested_on": "ተሓቲቱ",
+  "please_select_rating": "በጃኹም ደረጃ ምረጹ።",
+  "failed_submit_feedback": "ምላሽ ምስዳር ኣይተሳናኸን። በጃኹም እንደገና ፈትኑ።",
+  "how_was_experience": "ተመክሮኹም ከመይ እዩ ነይሩ?",
+  "order_successfully_done": "ትእዛዝኩም ብስእሊ ተዛዚሙ። ተመክሮኹም ብዛዕባ ሓጺር ምላሽ ምሃብ ይፈልጡ?",
+  "write_review": "ግምገማ ጽሓፍ",
+  "skip": "ዝለል"
 }
